# orca-spectroscopy-tools

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: migration-notes.md
examples/output/: spectral_extrema.csv
src/orca_spectroscopy_tools/: __init__.py  analysis.py  cli.py  io.py  plotting.py
tests/: test_analysis.py  test_cli.py  test_io.py
