[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-spectroscopy-tools"
version = "0.1.0"
description = "Post-processing and plotting tools for ORCA and orca_mapspc spectroscopy data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hosein Shadram"}]
keywords = ["ORCA", "spectroscopy", "computational chemistry", "circular dichroism", "MCD"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
orca-spectra = "orca_spectroscopy_tools.cli:main"

[project.urls]
Repository = "https://github.com/shadram87/orca-spectroscopy-tools"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
